<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddIntervention">
    <RelativeLayout
        android:id="@+id/layoutInsertIntervention"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/Plate"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/license"
            android:inputType="text" />

        <EditText
            android:id="@+id/Title"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="82dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text" />

        <EditText
            android:id="@+id/Description"
            android:layout_width="239dp"
            android:layout_height="122dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="151dp"
            android:ems="10"
            android:background="@null"
            android:scrollbars="vertical"
            android:hint="@string/description"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/Km"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Description"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/km"
            android:inputType="number" />


        <Button
            android:id="@+id/addIntervention"
            android:layout_width="73dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/my_button"
            android:onClick="onClick"
            android:text="Add Intervention"
        />

        <Button
            android:id="@+id/updateIntervention"
            android:layout_width="73dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/addIntervention"
            android:background="@drawable/my_button"
            android:onClick="onClick"
            android:text="Update"
            />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>