<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddCarActivity">
    <RelativeLayout
        android:id="@+id/layoutInsertCar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/LicensePlate"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/license"
            android:inputType="text" />

        <EditText
            android:id="@+id/Make"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="82dp"
            android:ems="10"
            android:hint="@string/make"
            android:inputType="text" />

        <EditText
            android:id="@+id/Model"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="151dp"
            android:ems="10"
            android:hint="@string/model"
            android:inputType="text" />

        <EditText
            android:id="@+id/Km"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="215dp"
            android:ems="10"
            android:hint="@string/km"
            android:inputType="number" />

        <Spinner
            android:id="@+id/show_dropdown_menu"
            android:layout_width="190dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="192dp"
            android:background="@drawable/my_button"
            android:spinnerMode="dropdown"
            android:text="Select Fuel Type "
            android:textColor="#fff" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="64dp"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/my_button"
            android:onClick="onClick"
            android:text="Add Car" />

        <Button
            android:id="@+id/updateCar"
            android:layout_width="73dp"
            android:layout_height="64dp"
            android:layout_alignTop="@+id/addButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-4dp"
            android:background="@drawable/my_button"
            android:onClick="onClick"
            android:text="Update" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>